--- a/vignettes/parallelization.Rmd
+++ b/vignettes/parallelization.Rmd
@@ -137,7 +137,7 @@ ctrl = setMBOControlInfill(ctrl, crit = crit.cb)
 ctrl = setMBOControlMultiPoint(ctrl, method = "cb")
 ctrl = setMBOControlTermination(ctrl, iters = 5)
 design = generateDesign(n = 5*8, par.set = getParamSet(obj.fun))
-# library(parallelMap)
+library(parallelMap)
 # parallelStartMulticore(cpus = 2, show.info = FALSE)
 res = mbo(obj.fun, control = ctrl, design = design, show.info = FALSE)
 # parallelStop()
@@ -178,7 +178,7 @@ autoplot(obj.fun.single, render.levels = TRUE) + general.scale
 Now let's create an objective function that uses parallelization internally by using the function `parallelMap()` of the equally named package.
 
 ```{r custom_noisy_parallel}
-# parallelRegisterLevels(levels = "objective")
+parallelRegisterLevels(levels = "objective")
 obj.fun.parallel = makeSingleObjectiveFunction(
   name = "noisy_example",
   fn = function(x) {
