--- a/vignettes/parallelization.Rmd
+++ b/vignettes/parallelization.Rmd
@@ -19,6 +19,9 @@ knitr::opts_chunk$set(cache = TRUE, collapse = FALSE)
 knitr::knit_hooks$set(document = function(x){
   gsub("```\n*```r*\n*", "", x)
 })
+
+# cheat and secretly don't do parallelization for windows compatibility.
+parallelStartMulticore = parallelStop = function(...) invisible()
 ```
 
 ## Purpose
