--- a/vignettes/mlrMBO.Rmd
+++ b/vignettes/mlrMBO.Rmd
@@ -6,6 +6,7 @@ output:
     toc_float:
       collapsed: true
       smooth_scroll: false
+    dev: svg
 vignette: >
   %\VignetteIndexEntry{Quick introduction}
   %\VignetteEngine{knitr::rmarkdown}
@@ -15,7 +16,7 @@ vignette: >
 ```{r setup, include = FALSE, cache = FALSE}
 library(mlrMBO)
 set.seed(123)
-knitr::opts_chunk$set(cache = TRUE, collapse = FALSE)
+knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, dev = "svg")
 knitr::knit_hooks$set(document = function(x){
   gsub("```\n*```r*\n*", "", x)
 })
