--- a/vignettes/parallelization.Rmd
+++ b/vignettes/parallelization.Rmd
@@ -6,7 +6,8 @@ output:
     toc_float:
       collapsed: true
       smooth_scroll: false
-    dev: svg
+    dev: png
+    fig_retina: null
 vignette: >
   %\VignetteIndexEntry{Parallelization}
   %\VignetteEngine{knitr::rmarkdown}
@@ -16,7 +17,7 @@ vignette: >
 ```{r setup, include = FALSE, cache = FALSE}
 library(mlrMBO)
 set.seed(1)
-knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, dev = "svg")
+knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, dev = "png")
 knitr::knit_hooks$set(document = function(x){
   gsub("```\n*```r*\n*", "", x)
 })
