add hidden setup

--- a/vignettes/supplementary/machine_learning_with_mlrmbo.Rmd
+++ b/vignettes/supplementary/machine_learning_with_mlrmbo.Rmd
@@ -13,6 +13,16 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+```{r hidden_setup, include = FALSE, cache = FALSE}
+library(mlrMBO)
+library(rgenoud)
+set.seed(123)
+knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, dev = "svg")
+knitr::knit_hooks$set(document = function(x){
+  gsub("```\n*```r*\n*", "", x)
+})
+```
+
 ## Purpose
 
 This Vignette is supposed to give you an introduction on how to use `mlrMBO` for hyperparameter tuning in the context of machine learning using the `mlr` package.
