--- a/vignettes/supplementary/human_in_the_loop_MBO.Rmd
+++ b/vignettes/supplementary/human_in_the_loop_MBO.Rmd
@@ -15,6 +15,7 @@ vignette: >
 
 ```{r setup, include = FALSE, cache = FALSE}
 library(mlrMBO)
+library(rgenoud)
 library(ggplot2)
 set.seed(123)
 knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, dev = "svg", fig.height = 3.5)
