--- a/vignettes/supplementary/noisy_optimization.Rmd
+++ b/vignettes/supplementary/noisy_optimization.Rmd
@@ -15,6 +15,7 @@ vignette: >
 
 ```{r setup, include = FALSE, cache = FALSE}
 library(mlrMBO)
+library(rgenoud)
 set.seed(1)
 knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, dev = "svg")
 knitr::knit_hooks$set(document = function(x){
