--- a/vignettes/supplementary/parallelization.Rmd
+++ b/vignettes/supplementary/parallelization.Rmd
@@ -16,6 +16,7 @@ vignette: >
 
 ```{r setup, include = FALSE, cache = FALSE}
 library(mlrMBO)
+library(rgenoud)
 set.seed(1)
 knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, dev = "png")
 knitr::knit_hooks$set(document = function(x){
