--- a/vignettes/supplementary/human_in_the_loop_MBO.Rmd
+++ b/vignettes/supplementary/human_in_the_loop_MBO.Rmd
@@ -18,7 +18,7 @@ library(mlrMBO)
 library(rgenoud)
 library(ggplot2)
 set.seed(123)
-knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, dev = "svg", fig.height = 3.5)
+knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, fig.height = 3.5)
 knitr::knit_hooks$set(document = function(x){
   gsub("```\n*```r*\n*", "", x)
 })
