--- a/vignettes/supplementary/parallelization.Rmd
+++ b/vignettes/supplementary/parallelization.Rmd
@@ -18,7 +18,7 @@ vignette: >
 library(mlrMBO)
 library(rgenoud)
 set.seed(1)
-knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, dev = "png")
+knitr::opts_chunk$set(cache = TRUE, collapse = FALSE)
 knitr::knit_hooks$set(document = function(x){
   gsub("```\n*```r*\n*", "", x)
 })
