--- a/vignettes/supplementary/noisy_optimization.Rmd
+++ b/vignettes/supplementary/noisy_optimization.Rmd
@@ -25,7 +25,7 @@ You can also try to reduce noise by using parallel evaluations of the same setti
 ## Infill criteria for noisy optimization
 
 Like always let's start with the function we want to optimize, but this time it will be noisy.
-Note that Kriging requires heteroscedasticity but slight dependencies of the variance on the $\boldsymbol{x}$ can be acceptable like in the following example:
+Note that Kriging requires homoscedasticity but slight dependencies of the variance on the $\boldsymbol{x}$ can be acceptable like in the following example:
 
 ```{r objective_function}
 library(mlrMBO)
