--- a/README.Rmd
+++ b/README.Rmd
@@ -16,8 +16,8 @@ opts_chunk$set(fig.width=5, fig.height=5, cache=TRUE)
 Model-based optimization with [mlr](https://github.com/mlr-org/mlr/).
 
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/mlrMBO)](https://cran.r-project.org/package=mlrMBO)
-[![Travis build status](https://img.shields.io/travis/mlr-org/mlrMBO/master?logo=travis&style=flat-square&label=macOS)](https://travis-ci.org/mlr-org/mlrMBO)
-[![AppVeyor build status](https://img.shields.io/appveyor/ci/mlr-org/mlrMBO?label=Windows&logo=appveyor&style=flat-square)](https://ci.appveyor.com/project/ropensci/mlrMBO)
+[![Travis build status](https://img.shields.io/travis/mlr-org/mlrMBO/master?logo=travis&style=flat-square&label=Linux)](https://travis-ci.org/mlr-org/mlrMBO)
+[![AppVeyor build status](https://img.shields.io/appveyor/ci/mlr-org/mlrMBO?label=Windows&logo=appveyor&style=flat-square)](https://ci.appveyor.com/project/mlr-org/mlrMBO)
 [![Coverage Status](https://img.shields.io/codecov/c/github/mlr-org/mlrMBO/master.svg)](https://codecov.io/github/mlr-org/mlrMBO?branch=master)
 [![Monthly RStudio CRAN Downloads](https://cranlogs.r-pkg.org/badges/mlrMBO)](https://CRAN.R-project.org/package=mlrMBO)
 
