--- a/README.Rmd
+++ b/README.Rmd
@@ -11,16 +11,18 @@ opts_chunk$set(fig.width=5, fig.height=5, cache=TRUE)
 
 # mlrMBO
 
-<!-- Please edit README.Rmd !-->
+Package website: [release](https://mlrmbo.mlr-org.com/) | [dev](https://mlr3mbo.mlr-org.com/dev)
 
 Model-based optimization with [mlr](https://github.com/mlr-org/mlr/).
 
+<!-- badges: start -->
+[![R CMD Check via {tic}](https://github.com/mlr-org/mlrMBO/workflows/R%20CMD%20Check%20via%20{tic}/badge.svg?branch=master)](https://github.com/mlr-org/mlrMBO/actions)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/mlrMBO)](https://cran.r-project.org/package=mlrMBO)
 [![Travis build status](https://img.shields.io/travis/mlr-org/mlrMBO/master?logo=travis&style=flat-square&label=Linux)](https://travis-ci.org/mlr-org/mlrMBO)
 [![AppVeyor build status](https://img.shields.io/appveyor/ci/mlr-org/mlrMBO?label=Windows&logo=appveyor&style=flat-square)](https://ci.appveyor.com/project/mlr-org/mlrMBO)
 [![Coverage Status](https://img.shields.io/codecov/c/github/mlr-org/mlrMBO/master.svg)](https://codecov.io/github/mlr-org/mlrMBO?branch=master)
 [![Monthly RStudio CRAN Downloads](https://cranlogs.r-pkg.org/badges/mlrMBO)](https://CRAN.R-project.org/package=mlrMBO)
-
+<!-- badges: end -->
 
 * [Documentation](https://mlr-org.github.io/mlrMBO/)
 * [Issues, Requests and Bug Tracker](https://github.com/mlr-org/mlrMBO/issues)
